Fixed layout issue of product section

--- a/web/bundles/lovethatfit/admin/css/bootstrap.css
+++ b/web/bundles/lovethatfit/admin/css/bootstrap.css
@@ -6365,7 +6365,7 @@ height:60px;
 
 #pro_color{
          padding:10px 10px 0px 10px;
-	overflow:hidden;
+	
         position: relative;      
        
     
@@ -6462,4 +6462,22 @@ padding:5px 0px 5px 0px;
     position:absolute;
     margin-top: -22px
     
+}
+
+#pro_color form label{    
+    float: left;    
+    width: 180px;
+}
+
+#pro_color form {    
+    margin-bottom: 10px;    
+    
+}
+
+#product_color_sizes{    
+    padding-top: 10px;
+}
+
+#product_color_displayProductColor{
+    padding-top:18px;
 }
